Fixed Wrap styling for better scaling

--- a/webdock-app/src/layout/navigation/Navigation.scss
+++ b/webdock-app/src/layout/navigation/Navigation.scss
@@ -3,17 +3,26 @@
 
 nav {
   background-color: white;
-  position: sticky;
+  position: fixed;
   height: 70px;
   width: 100%;
-  padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 1000;
+
 
   @media screen and (min-width: v.$desktop-screen) {
     height: 65px;
-    padding: 10px 30px;
+  }
+
+  .nav-wrap {
+    display: flex;
+    width: 100%;
+    padding: 0px 20px;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
   }
 
   .menu-items {
@@ -38,6 +47,8 @@ nav {
     @media screen and (min-width: v.$desktop-screen) {
       list-style: none;
       display: flex;
+      gap: 10px;
+      height: 100%;
       justify-content: space-between;
       align-items: center;
 
@@ -59,9 +70,7 @@ nav {
         align-items: center;
         justify-content: center;
         position: relative;
-        padding: 10px 0;
-        height: 70px;
-        width: 55px;
+        height: 100%;
 
         &:hover {
           transition: 0.5s;
